...
    "무료 도서" : {

    },
    "무자막 쉐도잉" : {

    },
    "문장 분석" : {

    },
    "문장 분석 로딩 중" : {

    },
    "문장 분석 실험" : {
...
    "미리보기" : {

    },
    "미리보기 다운로드 삭제" : {

    },
    "배속" : {

    },
    "버블로 보기" : {

    },
    "번역" : {
...
    "선택한 단어와 직접 연결됨" : {

    },
    "선택한 도서의 다운로드만 삭제합니다. 학습 기록은 남습니다." : {

    },
    "설정" : {

    },
    "설정에서 마이크를 허용해 주세요." : {

    },
    "설정의 데이터 관리에서 상태를 확인하고 다시 시도할 수 있어요." : {
...
    "잠김" : {

    },
    "재생 다시 시도" : {

    },
    "재생 속도" : {

    },
    "재생 완료, 확인 대기" : {

    },
    "재생 중" : {
...
    "편집 상태 보기" : {

    },
    "편집 완료" : {

    },
    "폰트 설정" : {

    },
    "폰트 초기화 (System)" : {

    },
    "프랑스어" : {
...
    "학습 방법" : {

    },
    "학습 버튼 위치" : {

    },
    "학습 설정" : {

    },
    "학습 속도" : {

    },
    "학습 속도 %@" : {

    },
    "학습 안내" : {
...
